--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Welcome to my website!!</h1>
-=======
-        <h1 style="color:blue;">Welcome to my website!</h1>
->>>>>>> aa98627dd9f8a8d99c50d0107b0807bf4a995cab
+        <h1 style="color:blue;">Welcome to my website!!</h1>
         <h2>Hello!</h2>
         Hello, world!
     </body>
